fixed colors on mobile

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 .container{
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    max-width: 100vw;
     padding: 0;
 }
 
@@ -47,6 +47,10 @@ hr {
     margin-top: 6vh;
 }
 
+.body-text{
+    max-width: 90vw !important;
+}
+
 .body-img{
     max-width: 75vw;
 }
@@ -57,11 +61,12 @@ hr {
     background-size: cover;
     background-image: url('images/BannerBackground.png');
     padding-top: 8vw;
-    padding-left: 5vw;
+    padding-left: 5vw !important;
     color: white;
     height: 102vh;
     min-width: 100%;
     margin: 0;
+    align-items: center; /* align vertical */
 }
 
 .main-header{
@@ -79,6 +84,8 @@ hr {
     height: 50vh;
     min-width: 100%;
     margin: 0;
+    align-items: center; /* align vertical */
+    padding-left: 5vw !important;
 }
 
 .page-header{
